# cpp-named-params

./: .gitignore  CMakeLists.txt  README.md
cmake/: ProjAddExecutable.cmake
cpp_named_params/: constructor.hpp  constructor_named_params.hpp  function.hpp  template_named_types.hpp  template_named_value_macros.hpp  template_named_values.hpp
include/: template_named_value_macros.hpp  template_named_values.hpp
tests/: CMakeLists.txt  constructor.cpp  constructor_named_params.cpp  function.cpp  template_named_types.cpp  template_named_values.cpp
